# hozo-sentinel

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  gameplan.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: config.example.yaml
devlog/: ho-00-project-setup.md
docs/: architecture.md
src/backupd/: __init__.py  disk.py  server.py  system.py  zfs.py
src/hozo/: __init__.py  cli.py
src/hozo/api/: __init__.py  models.py  routes.py
src/hozo/api/templates/: base.html  dashboard.html  job_form.html  job_log.html  restore_confirm.html  restore_log.html  settings.html
src/hozo/api/templates/auth/: devices.html  login.html  register.html
src/hozo/api/templates/partials/: job_cards.html  log_lines.html
src/hozo/auth/: __init__.py  session.py  webauthn_helpers.py
src/hozo/config/: __init__.py  loader.py  writer.py
src/hozo/core/: __init__.py  backup.py  disk.py  job.py  ssh.py  wol.py
src/hozo/notifications/: notify.py
src/hozo/scheduler/: __init__.py  runner.py
tests/: __init__.py  test_api.py  test_auth.py  test_backup.py  test_cli.py  test_config.py  test_disk.py  test_job.py  test_notify.py  test_scheduler.py  test_ssh.py  test_wol.py  test_writer.py
